--- a/public/frontend/seller/assets/responsive.css
+++ b/public/frontend/seller/assets/responsive.css
@@ -2301,7 +2301,9 @@ section.sec-2.productPageTn .vec-box {
 .registration-form .form-main.text-center div {
     margin: 0;
 }
-
+.registration-form .form-main.text-center div span {
+    margin: 20px;
+}
 /*Seller Login and Reg Form*/
 .form-box {
     max-width: 100%;
