--- a/public/frontend/seller/assets/responsive.css
+++ b/public/frontend/seller/assets/responsive.css
@@ -2095,6 +2095,78 @@ section.thanks {
 }
 /*Seller Login And Reg Form End*/
 
+/*Seller User Forms*/
+div.sellerForm form input[type="password"] {
+    margin: 16px 0 0;
+}
+
+div.sellerForm form button {
+    margin-left: 0px;
+    font-size: 14px;
+}
+div.sellerForm .reg-form-heading h3 {
+    margin-bottom: 14px;
+}
+.reg-form-heading p {
+    font-size: 14px;
+}
+.reg-form-heading {
+    margin-bottom: 30px;
+}
+
+div.sellerForm div.form-inputs {
+    margin: 0;
+    padding: 0;
+}
+
+div.sellerForm div.form-inputs input {
+    width: 100% !important;
+    max-width: 65% !important;
+}
+.sellerForm .new-user {
+    font-size: 14px;
+    margin: 10px 0 18px;
+    display: block;
+}
+
+.sellerForm .forgott-link {
+    font-size: 14px;
+    margin-top: 8px;
+    display: block;
+}
+
+.sellerReg form input {
+    width: 100% !important;
+    max-width: 100% !important;
+    margin: 0 !important;
+    font-size: 14px;
+}
+
+.sellerReg form .inputBox {
+    width: 100%;
+    max-width: 90%;
+    position: static !important;
+    margin: 0 auto !important;
+    padding-bottom: 6px !important;
+}
+
+.sellerReg form .new-user {
+    margin: 0 !important;
+    position: static !important;
+    font-size: 14px;
+}
+
+.sellerReg form button {
+    margin: 16px 0 0 !important;
+    width: 100% !important;
+    max-width: 100% !important;
+    font-size: 14px;
+}
+
+
+/*Seller User Forms End*/
+
+
 }
 
 @media (max-width: 575px) {
@@ -2321,7 +2393,9 @@ section.sec-2.productPageTn .vec-box {
 .reg .form-box {
     max-width: 100%;
 }
-
+div.sellerForm div.form-inputs input {
+    max-width: 88% !important;
+}
 /*Seller Login and Reg FormEnd*/
 
 }
