--- a/public/frontend/seller/assets/style.css
+++ b/public/frontend/seller/assets/style.css
@@ -3084,3 +3084,26 @@ ol.tagLines li::marker {
 .reg-contBox p:empty {
     display: none;
 }
+
+/*Seller User Forms*/
+.reg-form-heading h3 {
+    margin-bottom: 18px;
+}
+.sellerForm .forgott-link {
+    text-decoration:none;
+}
+div.sellerReg form span.invalid-feedback {
+    position: static !important;
+    text-align: left;
+    font-size: 13px;
+    font-weight: 400;
+    margin: 6px 0 0 !important;
+}
+div.sellerReg form span.invalid-feedback strong {
+    font-weight: 500;
+}
+.form-main form .row.signup-input div input::placeholder {
+    font-weight: 400;
+}
+
+/*Seller User Forms End*/
