--- a/public/frontend/seller/assets/responsive.css
+++ b/public/frontend/seller/assets/responsive.css
@@ -1656,6 +1656,10 @@ section.ycp-sec {
     width: 100%;
     max-width: 100%;
 }
+.footer-sub h4 {
+    font-size: 10px;
+    text-align: center;
+}
     .menu {
         display: block;
     }
@@ -2388,7 +2392,13 @@ ol.tagLines li {
 
 /*Seller User Forms End*/
 
-
+.registration-form .form-main.text-center div span {
+    font-size: 11px;
+    position: absolute;
+    bottom: -9px;
+    width: 100%;
+    left: 0;
+}
 }
 
 @media (max-width: 575px) {
@@ -2454,7 +2464,11 @@ h2.part-heading {
     font-size: 20px;
     margin-bottom: 20px;
 }
+.registration-form .form-main.text-center div span {
 
+    bottom: -33px;
+
+}
 .step-img img {
     max-width: 150px;
 }
@@ -2635,5 +2649,14 @@ div.sellerForm div.form-inputs input {
     font-size: 14px;
 }
 /*Seller Login and Reg FormEnd*/
+table.table.table-striped {
+    border-collapse: collapse;
+    width: 100%;
+    max-width: 820px;
+    width: 650px;
 
+}
+.summTn {
+    overflow-x: scroll;
+}
 }
