--- a/public/frontend/seller/assets/style.css
+++ b/public/frontend/seller/assets/style.css
@@ -909,6 +909,7 @@ section.photo-up-sec-2 {
     padding: 30px;
     border-radius: 20px;
     text-align: center;
+    height:100%;
 }
 
 .add-photos-numbering h3 {
@@ -2096,8 +2097,8 @@ section.sec-2.productPageTn .col-lg-12.col-md-12 {
 table.table.table-striped {
     border-collapse: collapse;
     width: 100%;
-    max-width: 820px;
-    width: 880px;
+    /*max-width: 820px;*/
+    /*width: 880px;*/
 }
 /*hamza css */
 
