--- a/public/frontend/seller/assets/style.css
+++ b/public/frontend/seller/assets/style.css
@@ -110,7 +110,25 @@ ul.navlinks {
     display: flex;
     width: 15%;
 }
+.dropdown > span{
+    position: relative;
+    display: inline-block;
+    color:white;
+}
 
+.dropdown-content {
+display: none;
+position: absolute;
+background-color: #f9f9f9;
+min-width: 160px;
+box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+padding: 12px 16px;
+z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+display: block;
+}
 /* SECTION-1 */
 
 section.sec-1 {
